added popover xib to profile buttons not connected yet

--- a/reSOUND/Views/Base.lproj/Main.storyboard
+++ b/reSOUND/Views/Base.lproj/Main.storyboard
@@ -388,7 +388,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3al-8f-Am8">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3al-8f-Am8" customClass="PopOver" customModule="reSOUND" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="618" width="375" height="250"/>
                                 <color key="backgroundColor" red="0.0" green="0.98106676339999999" blue="0.57369142770000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -1002,6 +1002,6 @@
         <image name="britney" width="402" height="302"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="2Pl-nZ-f8r"/>
+        <segue reference="YqP-dD-A2j"/>
     </inferredMetricsTieBreakers>
 </document>
